# plancritic

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  demo_basic_usage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
examples/: __init__.py
notebooks/: 01_getting_started.ipynb
src/plancritic/: __init__.py
src/plancritic/cli/: __init__.py  export.py  score.py  train.py
src/plancritic/data/: __init__.py  samplers.py
src/plancritic/data/adapters/: __init__.py  argoverse_adapter.py  womd_adapter.py
src/plancritic/eval/: __init__.py  metrics.py  physics_checks.py
src/plancritic/maps/: __init__.py  lanegraph.py
src/plancritic/models/: __init__.py  critic.py  encoders.py  losses.py
src/plancritic/viz/: __init__.py
test_data/: scene_training_001.json  synthetic_dataset.json
tests/: __init__.py  conftest.py  test_cli.py  test_data.py  test_integration.py  test_models.py  test_physics.py
web/: .env.example  index.html  metadata.json  scene_training_001.json  test_data.json  visualizer.js
